@@ -141,7 +141,6 @@ public:
     virtual const String&    
                         getDropTarget() const;
     String              getSecureInputApp() const override;
-    void                updateScrollDirection() override;
 
 protected:
     // IPlatformScreen overrides
@@ -248,9 +247,6 @@ private: // HACK
 
     // send drag info and data back to server
     void                sendDragThread(void*);
-
-    SInt32              mapScrollToSynergy(SInt32 delta) const;
-    SInt32              mapScrollFromSynergy(SInt32 delta) const;
 
 private:
     struct HotKeyItem {
@@ -371,9 +367,5 @@ private:
     Thread*            m_sendDragThread;
 
     PrimaryKeyDownList    m_primaryKeyDownList;
-
-    // -1 for natural scrolling direction, 1 otherwise
-    SInt32                    m_scrollDirectionMouse = 1;
-    SInt32                    m_scrollDirectionTouchpad = 1;
-    MSWindowsPowerManager     m_powerManager;
+    MSWindowsPowerManager m_powerManager;
 };
