@@ -338,10 +338,6 @@ private:
     Thread*                m_getDropTargetThread;
     String                    m_dropTarget;
 
-    void                      updateScrollDirection() override;
-    // -1 for natural scrolling direction, 1 otherwise
-    SInt32                    m_scrollDirection = 1;
-    
 #if defined(MAC_OS_X_VERSION_10_7)
     Mutex*                    m_carbonLoopMutex;
     CondVar<bool>*            m_carbonLoopReady;
