@@ -25,6 +25,8 @@
 #include "platform/XWindowsUtil.h"
 #include "synergy/Clipboard.h"
 #include "synergy/KeyMap.h"
+#include "synergy/ClientApp.h"
+#include "synergy/ClientArgs.h"
 #include "synergy/XScreen.h"
 #include "synergy/ArgsBase.h"
 #include "synergy/App.h"
@@ -39,7 +41,6 @@
 #include <cstring>
 #include <cstdlib>
 #include <algorithm>
-#include <thread>
 #if X_DISPLAY_MISSING
 #	error X11 is required to build synergy
 #else
@@ -875,11 +876,7 @@ XWindowsScreen::fakeMouseWheel(SInt32, SInt32 yDelta) const
 		return;
 	}
 
-	// use mouse scroll direction for inversion
-	if( m_scrollDirectionMouse < 0 )
-	{
-		yDelta = -yDelta;
-	}
+	yDelta *= ClientApp::instance().args().m_clientScrollDirection;
 
 	// choose button depending on rotation direction
 	const unsigned int xButton = mapButtonToX(static_cast<ButtonID>(
@@ -1638,13 +1635,11 @@ XWindowsScreen::onMouseRelease(const XButtonEvent& xbutton)
 	}
 	else if (xbutton.button == 4) {
 		// wheel forward (away from user)
-		// invert for natural scroll setting
-		sendEvent(m_events->forIPrimaryScreen().wheel(), WheelInfo::alloc(0, 120 * m_scrollDirectionMouse));
+		sendEvent(m_events->forIPrimaryScreen().wheel(), WheelInfo::alloc(0, 120));
 	}
 	else if (xbutton.button == 5) {
 		// wheel backward (toward user)
-		// invert for natural scroll setting
-		sendEvent(m_events->forIPrimaryScreen().wheel(), WheelInfo::alloc(0, -120 * m_scrollDirectionMouse));
+		sendEvent(m_events->forIPrimaryScreen().wheel(), WheelInfo::alloc(0, -120));
 	}
 	// XXX -- support x-axis scrolling
 }
@@ -2169,28 +2164,3 @@ XWindowsScreen::selectXIRawMotion()
 	free(mask.mask);
 }
 #endif
-
-void
-XWindowsScreen::updateScrollDirection()
-{
-	if (m_shouldUpdateScrollDirection)
-	{
-		m_shouldUpdateScrollDirection = false;
-
-		std::thread scrollDirectionUpdateThread([this]{
-			std::string mouseScroll = ArchSystemUnix::runCommand("gsettings get org.gnome.desktop.peripherals.mouse natural-scroll");
-			if(mouseScroll == "false\n")
-				m_scrollDirectionMouse = 1;
-			else if(mouseScroll == "true\n")
-				m_scrollDirectionMouse = -1;
-
-			std::string touchpadScroll = ArchSystemUnix::runCommand("gsettings get org.gnome.desktop.peripherals.touchpad natural-scroll");
-			if(touchpadScroll == "false\n")
-				m_scrollDirectionTouchpad = 1;
-			else if(touchpadScroll == "true\n")
-				m_scrollDirectionTouchpad = -1;
-		});
-		scrollDirectionUpdateThread.detach();
-	}
-}
-
